setup front-end and flask-pymongo
