# server/ulmapi/dto/__init__.py
@@ -4,5 +4,6 @@
 from __future__ import absolute_import
 # import models into model package
 from ulmapi.dto.access_token import AccessToken
-from ulmapi.dto.deliverable import Deliverable
+from ulmapi.dto.cat import Cat
+from ulmapi.dto.signup_info import SignupInfo
 from ulmapi.dto.user_credentials import UserCredentials
