# server/ulmapi/dto/signup_info.py
@@ -1,0 +1,122 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ulmapi.dto.base_model_ import Model
+from ulmapi import util
+
+
+class SignupInfo(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, email=None, username=None, password=None):  # noqa: E501
+        """SignupInfo - a model defined in OpenAPI
+
+        :param email: The email of this SignupInfo.  # noqa: E501
+        :type email: str
+        :param username: The username of this SignupInfo.  # noqa: E501
+        :type username: str
+        :param password: The password of this SignupInfo.  # noqa: E501
+        :type password: str
+        """
+        self.openapi_types = {
+            'email': str,
+            'username': str,
+            'password': str
+        }
+
+        self.attribute_map = {
+            'email': 'email',
+            'username': 'username',
+            'password': 'password'
+        }
+
+        self._email = email
+        self._username = username
+        self._password = password
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SignupInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SignupInfo of this SignupInfo.  # noqa: E501
+        :rtype: SignupInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def email(self):
+        """Gets the email of this SignupInfo.
+
+
+        :return: The email of this SignupInfo.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email):
+        """Sets the email of this SignupInfo.
+
+
+        :param email: The email of this SignupInfo.
+        :type email: str
+        """
+        if email is None:
+            raise ValueError("Invalid value for `email`, must not be `None`")  # noqa: E501
+
+        self._email = email
+
+    @property
+    def username(self):
+        """Gets the username of this SignupInfo.
+
+
+        :return: The username of this SignupInfo.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username):
+        """Sets the username of this SignupInfo.
+
+
+        :param username: The username of this SignupInfo.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+
+        self._username = username
+
+    @property
+    def password(self):
+        """Gets the password of this SignupInfo.
+
+
+        :return: The password of this SignupInfo.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password):
+        """Sets the password of this SignupInfo.
+
+
+        :param password: The password of this SignupInfo.
+        :type password: str
+        """
+        if password is None:
+            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
+
+        self._password = password
